# tauri-app-demo

./: README.md
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.vue  Appbak.vue  config.json  main.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/assets/fonts/: extrafont.css
tauri-app/src/components/: Greet.vue  HeadPage.vue  common.css  new.css
tauri-app/src/windows/: actions.js  index.js
